--- a/data/hyps/hyp.scratch.s2anet.yaml
+++ b/data/hyps/hyp.scratch.s2anet.yaml
@@ -7,49 +7,24 @@
 # 一张卡，每张卡8张图像，则学习率应为0.01
 lr0: 0.005  # initial learning rate (SGD=1E-2, Adam=1E-3)
 lrf: 0.005  # final OneCycleLR learning rate (lr0 * lrf)
-momentum: 0.937  # SGD momentum/Adam beta1
-weight_decay: 0.0005  # optimizer weight decay 5e-4
-warmup_epochs: 3.0  # warmup epochs (fractions ok)
+momentum: 0.9  # SGD momentum/Adam beta1
+weight_decay: 0.0001  # optimizer weight decay 5e-4
+# warmup_epochs: 3.0  # warmup epochs (fractions ok)
 warmup_iters: 500  # 最大的warmup的迭代次数，与warmup_epochs确定的迭代次数相比较，最终warmup的迭代次数取两者间最大的
 
 warmup_momentum: 0.8  # warmup initial momentum
-warmup_bias_lr: 0.1  # warmup initial bias lr
-box: 0.05  # box loss gain
-cls: 0.5  # cls loss gain
-cls_pw: 1.0  # cls BCELoss positive_weight
-obj: 1.0  # obj loss gain (scale with pixels)
-obj_pw: 1.0  # obj BCELoss positive_weight
-iou_t: 0.20  # IoU training threshold
-anchor_t: 4.0  # anchor-multiple threshold
-# anchors: 3  # anchors per output layer (0 to ignore)
+warmup_bias_lr: 0.0  # warmup initial bias lr
 
-# focal-loss的参数
-fl_gamma: 2.0  # focal loss gamma (efficientDet default gamma=1.5)
-fl_alpha: 0.5  # focal loss gamma (efficientDet default gamma=1.5)
 
-# hsv_h: 0.015  # image HSV-Hue augmentation (fraction)
-# hsv_s: 0.7  # image HSV-Saturation augmentation (fraction)
-# hsv_v: 0.4  # image HSV-Value augmentation (fraction)
-# degrees: 1.0  # image rotation (+/- deg)
-# translate: 0.1  # image translation (+/- fraction)
-# scale: 0.3  # image scale (+/- gain)
-# shear: 0.0  # image shear (+/- deg)
-# perspective: 0.0  # image perspective (+/- fraction), range 0-0.001
-# flipud: 0.5  # image flip up-down (probability)
-# fliplr: 0.5  # image flip left-right (probability)
-# mosaic: 0.0  # image mosaic (probability)
-# mixup: 0.0  # image mixup (probability)
-# copy_paste: 0.0  # segment copy-paste (probability)
-
-hsv_h: 0.015  # image HSV-Hue augmentation (fraction)
-hsv_s: 0.7  # image HSV-Saturation augmentation (fraction)
-hsv_v: 0.4  # image HSV-Value augmentation (fraction)
-degrees: 1.0  # image rotation (+/- deg)
+hsv_h: 0.0  # image HSV-Hue augmentation (fraction)
+hsv_s: 0.0  # image HSV-Saturation augmentation (fraction)
+hsv_v: 0.0  # image HSV-Value augmentation (fraction)
+degrees: 0.0  # image rotation (+/- deg)
 translate: 0.0  # image translation (+/- fraction)
 scale: 0.0  # image scale (+/- gain)
 shear: 0.0  # image shear (+/- deg)
 perspective: 0.0  # image perspective (+/- fraction), range 0-0.001
-flipud: 0.5  # image flip up-down (probability)
+flipud: 0.0  # image flip up-down (probability)
 fliplr: 0.5  # image flip left-right (probability)
 mosaic: 0.0  # image mosaic (probability)
 mixup: 0.0  # image mixup (probability)
